--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
-*.rbc
-*.sassc
-.sass-cache
-capybara-*.html
-.rspec
+/.rbx/
 /.bundle
 /vendor/bundle
 /log/*
@@ -11,6 +7,11 @@ capybara-*.html
 /public/system/*
 /coverage/
 /spec/tmp/*
+
+*.rbc
+*.sassc
+.sass-cache
+capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
